Item-Desc precantage shift CSS FIX

--- a/src/pages/Cart/Cart.css
+++ b/src/pages/Cart/Cart.css
@@ -71,7 +71,7 @@
 
 .Item-Desc {
   /* width: 210px; */
-  height: 71px;
+  height: 80%;
 
   display: flex;
 }
